--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
         <a href="#">Contact</a>
     </div>
 
-    <script>
-        function toggleDrawer() {
-            const drawer = document.getElementById('drawer');
-            drawer.style.width = drawer.style.width === '250px' ? '0' : '250px';
-        }
-    </script>
+    <script src="drawer.js"></script>
 </body>
 </html>
