--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     </div>
 
     <div id="drawer" class="drawer">
-        <a href="#">Home</a>
+        <a href="#" onclick="toggleSubMenu('home-submenu')">Home</a>
+        <div id="home-submenu" class="submenu">
+            <a href="#">Phone</a>
+            <a href="#">Landline</a>
+        </div>
         <a href="#">About</a>
         <a href="#">Services</a>
         <a href="#">Contact</a>
