--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </div>
 
     <div id="drawer" class="drawer">
-        <a href="#" onclick="toggleSubMenu('home-submenu')">Home</a>
+        <a href="#" onclick="toggleSubMenu('home-submenu')">Contact</a>
         <div id="home-submenu" class="submenu">
             <a href="#">Phone</a>
-            <a href="#">Landline</a>
+            <a href="#">Email</a>
         </div>
         <a href="#">About</a>
         <a href="#">Services</a>
