--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="drawer" class="drawer">
         <a href="#" onclick="toggleSubMenu('home-submenu')">Contact</a>
         <div id="home-submenu" class="submenu">
-            <a href="#">Phone</a>
-            <a href="#">Email</a>
+            <a href="phone.html">Phone</a>
+            <a href="email.html">Email</a>
         </div>
         <a href="#">About</a>
         <a href="#">Services</a>
