--- a/email.html
+++ b/email.html
@@ -5,46 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Section with Update Popup</title>
     <link rel="stylesheet" href="email.css">
-</head>
+    <link rel="stylesheet" href="styles.css">
+    
 <body>
+    
+
+    <div class="navbar">
+        <span>My Website</span>
+        <img src="menu.png" alt="Menu" class="open-btn" onclick="toggleDrawer()" />
+    </div>
+
+    <div id="drawer" class="drawer">
+        <a href="#" onclick="toggleSubMenu('home-submenu')">Contact</a>
+        <div id="home-submenu" class="submenu">
+            <a href="phone.html">Phone</a>
+            <a href="email.html">Email</a>
+        </div>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </div>
+
     <div class="container">
-        <!-- Master Table Section -->
-        <div class="master-table">
-            <h1>Master Table</h1>
-            <input type="text" id="searchInput" placeholder="Search emails..." onkeyup="filterEmails()" />
-            <table id="emailTable">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Subject</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>John Doe</td>
-                        <td>john.doe@example.com</td>
-                        <td>Meeting Update</td>
-                        <td>
-                            <button class="update-btn" onclick="showUpdatePopup(this)">Update</button>
-                            <button class="delete-btn" onclick="deleteEmail(this)">Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Jane Smith</td>
-                        <td>jane.smith@example.com</td>
-                        <td>Project Proposal</td>
-                        <td>
-                            <button class="update-btn" onclick="showUpdatePopup(this)">Update</button>
-                            <button class="delete-btn" onclick="deleteEmail(this)">Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="cardmaster-table-card">
+            <div class="card-header">
+                <h1>Master Table</h1>
+                <div class="table-actions">
+                    <div class="upload-dropdown">
+                        <select class="upload-select" onchange="handleUploadSelection(this)">
+                            <option value="">Select File to Upload   ▼</option>
+                            <option value="bulk">Bulk Upload</option>
+                            <option value="single">Single Upload</option>
+                        </select>
+                        </div>
+                    <input type="text" id="searchInput" placeholder="Search emails..." onkeyup="filterEmails()" />
+                </div>
+            </div>
+            <div class="card-body">
+                <table id="emailTable">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Subject</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John Doe</td>
+                            <td>john.doe@example.com</td>
+                            <td>Meeting Update</td>
+                            <td>
+                                <button class="update-btn" onclick="showUpdatePopup(this)">Update</button>
+                                <button class="delete-btn" onclick="deleteEmail(this)">Delete</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jane Smith</td>
+                            <td>jane.smith@example.com</td>
+                            <td>Project Proposal</td>
+                            <td>
+                                <button class="update-btn" onclick="showUpdatePopup(this)">Update</button>
+                                <button class="delete-btn" onclick="deleteEmail(this)">Delete</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
 
-        <!-- Popup Card for Update -->
         <div id="updatePopup" class="popup">
             <div class="popup-content">
                 <h2>Update Email</h2>
@@ -54,12 +84,27 @@
                 <input type="email" id="updateEmail" />
                 <label for="updateSubject">Subject:</label>
                 <input type="text" id="updateSubject" />
-                <button onclick="closePopup()">Close</button>
-                <button onclick="saveUpdate()">Save</button>
+                <div class="popup-buttons">
+                    <button onclick="closePopup()">Close</button>
+                    <button onclick="saveUpdate()">Save</button>
+                </div>
             </div>
         </div>
     </div>
 
+    <script src="drawer.js"></script>
     <script src="email.js"></script>
+    <script>
+        function handleUploadSelection(selectElement) {
+            const value = selectElement.value;
+            if (value === 'bulk') {
+                alert('Implement Bulk Upload functionality here.');
+                selectElement.value = ''; // Reset the dropdown
+            } else if (value === 'single') {
+                alert('Implement Single Upload functionality here.');
+                selectElement.value = ''; // Reset the dropdown
+            }
+        }
+    </script>
 </body>
 </html>
