--- a/email.html
+++ b/email.html
@@ -33,7 +33,7 @@
                 <div class="table-actions">
                     <div class="upload-dropdown">
                         <select class="upload-select" onchange="handleUploadSelection(this)">
-                            <option value="">Select File to Upload   ▼</option>
+                            <option value="" disabled selected>Select File to Upload   ▼</option>
                             <option value="bulk">Bulk Upload</option>
                             <option value="single">Single Upload</option>
                         </select>
