--- a/email.html
+++ b/email.html
@@ -34,7 +34,8 @@
                         <select class="upload-select" onchange="handleUploadSelection(this)">
                             <option value="" disabled selected>Select File to Upload&nbsp; &nbsp;▼</option>
                             <option value="bulk">Bulk Upload</option>
-                            <option value="single">Single Upload</option>
+                            <option value="single-update">Single Update</option>
+                            <option value="single-add">Add New Email</option>
                         </select>
                     </div>
                     <input type="text" id="searchInput" placeholder="Search emails..." onkeyup="filterEmails()" />
@@ -56,17 +57,16 @@
                             <td>john.doe@example.com</td>
                             <td>Meeting Update</td>
                             <td>
-                                <button class="update-btn" onclick="showUpdatePopup(this)">Update</button>
+                                <button class="update-btn" onclick="openSingleUpdatePopup(this)">Update</button>
                                 <button class="delete-btn" onclick="deleteEmail(this)">Delete</button>
                             </td>
                         </tr>
                         <tr>
                             <td>Jane Smith</td>
                             <td>jane.smith@example.com</td>
-                            <td>jane.smith@example.com</td>
-                            
+                            <td>Project Proposal</td>
                             <td>
-                                <button class="update-btn" onclick="showUpdatePopup(this)">Update</button>
+                                <button class="update-btn" onclick="openSingleUpdatePopup(this)">Update</button>
                                 <button class="delete-btn" onclick="deleteEmail(this)">Delete</button>
                             </td>
                         </tr>
@@ -105,6 +105,44 @@
             </div>
         </div>
         <div id="overlay" class="overlay"></div>
+
+        <div id="singleUpdatePopup" class="single-update-popup">
+            <div class="single-update-popup-header">
+                <h2>Edit Email Details</h2>
+                <span class="close-button" onclick="closeSingleUpdatePopup()">×</span>
+            </div>
+            <div class="single-update-popup-content">
+                <label for="singleUpdateName">Name:</label>
+                <input type="text" id="singleUpdateName" />
+                <label for="singleUpdateEmail">Email:</label>
+                <input type="email" id="singleUpdateEmail" />
+                <label for="singleUpdateSubject">Subject:</label>
+                <input type="text" id="singleUpdateSubject" />
+            </div>
+            <div class="single-update-popup-buttons">
+                <button onclick="closeSingleUpdatePopup()">Cancel</button>
+                <button onclick="saveSingleUpdate()">Save</button>
+            </div>
+        </div>
+
+        <div id="singleAddPopup" class="single-update-popup">
+            <div class="single-update-popup-header">
+                <h2>Add New Email</h2>
+                <span class="close-button" onclick="closeSingleAddPopup()">×</span>
+            </div>
+            <div class="single-update-popup-content">
+                <label for="addName">Name:</label>
+                <input type="text" id="addName" />
+                <label for="addEmail">Email:</label>
+                <input type="email" id="addEmail" />
+                <label for="addSubject">Subject:</label>
+                <input type="text" id="addSubject" />
+            </div>
+            <div class="single-update-popup-buttons">
+                <button onclick="closeSingleAddPopup()">Cancel</button>
+                <button onclick="saveNewEmail()">Add</button>
+            </div>
+        </div>
     </div>
 
     <script src="drawer.js"></script>
@@ -114,13 +152,20 @@
         const overlay = document.getElementById('overlay');
         const uploadSelect = document.querySelector('.upload-select');
         const bulkUploadInput = document.getElementById('bulkUploadInput');
+        const singleUpdatePopup = document.getElementById('singleUpdatePopup');
+        const singleAddPopup = document.getElementById('singleAddPopup');
+
+        let currentRowToUpdate = null; // To keep track of which row is being edited
 
         function handleUploadSelection(selectElement) {
             const value = selectElement.value;
             if (value === 'bulk') {
                 openBulkUploadPopup();
-            } else if (value === 'single') {
-                alert('Implement Single Upload functionality here.');
+            } else if (value === 'single-update') {
+                console.log('Single Update selected from dropdown. Consider row selection.');
+                alert('Please click the "Update" button next to the email you want to edit.');
+            } else if (value === 'single-add') {
+                openSingleAddPopup(); // Call a new function to open the add form
             }
             selectElement.value = ''; // Reset the dropdown after selection
         }
@@ -133,7 +178,6 @@
         function closeBulkUploadPopup() {
             bulkUploadPopup.style.display = 'none';
             overlay.style.display = 'none';
-            // Optionally reset the file input value
             bulkUploadInput.value = '';
         }
 
@@ -141,16 +185,116 @@
             const file = bulkUploadInput.files[0];
             if (file) {
                 console.log('Selected CSV file:', file);
-                alert('CSV file selected. Implement processing.');
-                closeBulkUploadPopup(); // Close the popup after (potential) selection
+                alert('CSV file selected. Implement bulk processing.');
+                closeBulkUploadPopup();
                 // Implement your CSV file reading and processing logic here
             } else {
                 alert('Please select a CSV file.');
             }
         }
 
-        // Close the bulk upload popup if the user clicks outside
-        overlay.addEventListener('click', closeBulkUploadPopup);
+        function openSingleUpdatePopup(updateButton) {
+            currentRowToUpdate = updateButton.parentNode.parentNode; // Get the table row
+            const cells = currentRowToUpdate.querySelectorAll('td');
+            const name = cells[0].textContent;
+            const email = cells[1].textContent;
+            const subject = cells[2].textContent;
+
+            document.getElementById('singleUpdateName').value = name;
+            document.getElementById('singleUpdateEmail').value = email;
+            document.getElementById('singleUpdateSubject').value = subject;
+
+            singleUpdatePopup.style.display = 'block';
+            overlay.style.display = 'block';
+        }
+
+        function closeSingleUpdatePopup() {
+            singleUpdatePopup.style.display = 'none';
+            overlay.style.display = 'none';
+            currentRowToUpdate = null; // Reset the tracked row
+        }
+
+        function saveSingleUpdate() {
+            if (currentRowToUpdate) {
+                const name = document.getElementById('singleUpdateName').value;
+                const email = document.getElementById('singleUpdateEmail').value;
+                const subject = document.getElementById('singleUpdateSubject').value;
+
+                const cellsToUpdate = currentRowToUpdate.querySelectorAll('td');
+                cellsToUpdate[0].textContent = name;
+                cellsToUpdate[1].textContent = email;
+                cellsToUpdate[2].textContent = subject;
+
+                closeSingleUpdatePopup();
+                alert('Email details updated!'); // Provide user feedback
+            }
+        }
+
+        function openSingleAddPopup() {
+            // Clear any previous values in the form
+            document.getElementById('addName').value = '';
+            document.getElementById('addEmail').value = '';
+            document.getElementById('addSubject').value = '';
+
+            singleAddPopup.style.display = 'block';
+            overlay.style.display = 'block';
+        }
+
+        function closeSingleAddPopup() {
+            singleAddPopup.style.display = 'none';
+            overlay.style.display = 'none';
+        }
+
+        function saveNewEmail() {
+            const name = document.getElementById('addName').value;
+            const email = document.getElementById('addEmail').value;
+            const subject = document.getElementById('addSubject').value;
+            const emailTableBody = document.querySelector('#emailTable tbody');
+
+            // Create a new table row
+            const newRow = emailTableBody.insertRow();
+
+            // Insert cells for Name, Email, Subject, and Actions
+            const nameCell = newRow.insertCell();
+            const emailCell = newRow.insertCell();
+            const subjectCell = newRow.insertCell();
+            const actionsCell = newRow.insertCell();
+
+            nameCell.textContent = name;
+            emailCell.textContent = email;
+            subjectCell.textContent = subject;
+
+            // Create the "Update" and "Delete" buttons for the new row
+            const updateButton = document.createElement('button');
+            updateButton.textContent = 'Update';
+            updateButton.classList.add('update-btn');
+            updateButton.onclick = function() { openSingleUpdatePopup(this); };
+
+            const deleteButton = document.createElement('button');
+            deleteButton.textContent = 'Delete';
+            deleteButton.classList.add('delete-btn');
+            deleteButton.onclick = function() { deleteEmail(this); }; // Assuming you have a deleteEmail function
+
+            actionsCell.appendChild(updateButton);
+            actionsCell.appendChild(document.createTextNode(' ')); // Add a space between buttons
+            actionsCell.appendChild(deleteButton);
+
+            closeSingleAddPopup();
+            alert('New email added!'); // Provide user feedback
+        }
+
+        overlay.addEventListener('click', () => {
+            closeBulkUploadPopup();
+            closeSingleUpdatePopup();
+            closeSingleAddPopup();
+        });
+
+        // Placeholder for deleteEmail function
+        function deleteEmail(deleteButton) {
+            const rowToDelete = deleteButton.parentNode.parentNode;
+            rowToDelete.remove();
+            alert('Email deleted!');
+        }
     </script>
 </body>
 </html>
