Email Page Done

--- a/email.html
+++ b/email.html
@@ -33,9 +33,8 @@
                     <div class="upload-dropdown">
                         <select class="upload-select" onchange="handleUploadSelection(this)">
                             <option value="" disabled selected>Select File to Upload&nbsp; &nbsp;▼</option>
-                            <option value="bulk">Bulk Upload</option>
-                            <option value="single-update">Single Update</option>
-                            <option value="single-add">Add New Email</option>
+                            <option value="bulk">Upload Bulk Data</option>
+                            <option value="single-add">Upload Single Data</option>
                         </select>
                     </div>
                     <input type="text" id="searchInput" placeholder="Search emails..." onkeyup="filterEmails()" />
