--- a/phone.html
+++ b/phone.html
@@ -3,9 +3,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Phone Section with Update Popup</title>
+    <link rel="stylesheet" href="phone.css">
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    <h1>Phone</h1>
+    <div class="navbar">
+        <span>My Website</span>
+        <img src="menu.png" alt="Menu" class="open-btn" onclick="toggleDrawer()" />
+    </div>
+
+    <div id="drawer" class="drawer">
+        <a href="#" onclick="toggleSubMenu('home-submenu')">Contact</a>
+        <div id="home-submenu" class="submenu">
+            <a href="phone.html">Phone</a>
+            <a href="email.html">Email</a>
+        </div>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </div>
+
+    <div class="container">
+        <div class="cardmaster-table-card">
+            <div class="card-header">
+                <h1>Master Table</h1>
+                <div class="table-actions">
+                    <div class="upload-dropdown">
+                        <select class="upload-select" onchange="handleUploadSelection(this)">
+                            <option value="" disabled selected>Select File to Upload&nbsp; &nbsp;▼</option>
+                            <option value="bulk">Upload Bulk Data</option>
+                            <option value="single-add">Upload Single Data</option>
+                        </select>
+                    </div>
+                    <input type="text" id="searchInput" placeholder="Search phones..." onkeyup="filterPhones()" />
+                </div>
+            </div>
+            <div class="card-body">
+                <table id="phoneTable">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Phone</th>
+                            <th>Subject</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John Doe</td>
+                            <td>123-456-7890</td>
+                            <td>Work Inquiry</td>
+                            <td>
+                                <button class="update-btn" onclick="openSingleUpdatePopup(this)">Update</button>
+                                <button class="delete-btn" onclick="deletePhone(this)">Delete</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jane Smith</td>
+                            <td>987-654-3210</td>
+                            <td>Personal Call</td>
+                            <td>
+                                <button class="update-btn" onclick="openSingleUpdatePopup(this)">Update</button>
+                                <button class="delete-btn" onclick="deletePhone(this)">Delete</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div id="updatePopup" class="popup">
+            <div class="popup-content">
+                <h2>Update Phone</h2>
+                <label for="updateName">Name:</label>
+                <input type="text" id="updateName" />
+                <label for="updatePhone">Phone:</label>
+                <input type="text" id="updatePhone" />
+                <label for="updateSubject">Subject:</label>
+                <input type="text" id="updateSubject" />
+                <div class="popup-buttons">
+                    <button onclick="closePopup()">Close</button>
+                    <button onclick="saveUpdate()">Save</button>
+                </div>
+            </div>
+        </div>
+
+        <div id="bulkUploadPopup" class="bulk-upload-popup">
+            <div class="bulk-upload-popup-header">
+                <h2>Bulk Upload CSV</h2>
+                <span class="close-button" onclick="closeBulkUploadPopup()">×</span>
+            </div>
+            <div class="bulk-upload-popup-content">
+                <input type="file" id="bulkUploadInput" accept=".csv">
+                <div class="popup-buttons">
+                    <button onclick="closeBulkUploadPopup()">Cancel</button>
+                    <button onclick="handleBulkFileUpload()">Upload</button>
+                </div>
+            </div>
+        </div>
+        <div id="overlay" class="overlay"></div>
+
+        <div id="singleUpdatePopup" class="single-update-popup">
+            <div class="single-update-popup-header">
+                <h2>Edit Phone Details</h2>
+                <span class="close-button" onclick="closeSingleUpdatePopup()">×</span>
+            </div>
+            <div class="single-update-popup-content">
+                <label for="singleUpdateName">Name:</label>
+                <input type="text" id="singleUpdateName" />
+                <label for="singleUpdatePhone">Phone:</label>
+                <input type="text" id="singleUpdatePhone" />
+                <label for="singleUpdateSubject">Subject:</label>
+                <input type="text" id="singleUpdateSubject" />
+            </div>
+            <div class="single-update-popup-buttons">
+                <button onclick="closeSingleUpdatePopup()">Cancel</button>
+                <button onclick="saveSingleUpdate()">Save</button>
+            </div>
+        </div>
+
+        <div id="singleAddPopup" class="single-update-popup">
+            <div class="single-update-popup-header">
+                <h2>Add New Phone</h2>
+                <span class="close-button" onclick="closeSingleAddPopup()">×</span>
+            </div>
+            <div class="single-update-popup-content">
+                <label for="addName">Name:</label>
+                <input type="text" id="addName" />
+                <label for="addPhone">Phone:</label>
+                <input type="text" id="addPhone" />
+                <label for="addSubject">Subject:</label>
+                <input type="text" id="addSubject" />
+            </div>
+            <div class="single-update-popup-buttons">
+                <button onclick="closeSingleAddPopup()">Cancel</button>
+                <button onclick="saveNewPhone()">Add</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="drawer.js"></script>
+    <script src="phone.js"></script>
+    
 </body>
 </html>
