--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
     </div>
 
     <div id="drawer" class="drawer">
-        <a href="#" onclick="toggleSubMenu('home-submenu')">Contact</a>
-        <div id="home-submenu" class="submenu">
+        <a href="#" onclick="toggleSubMenu('contact-submenu')">Contact</a>
+        <div id="contact-submenu" class="submenu">
             <a href="phone.html">Phone</a>
             <a href="email.html">Email</a>
         </div>
-        <a href="#">About</a>
+        <a href="#" onclick="toggleSubMenu('template-submenu')">Template</a>
+        <div id="template-submenu" class="submenu">
+            <a href="templatename.html">Template Name</a>
+            <a href="templatecontent.html">Template Content</a>
+        </div>
         <a href="#">Services</a>
         <a href="#">Contact</a>
     </div>
