--- a/phone.html
+++ b/phone.html
@@ -20,7 +20,11 @@
             <a href="phone.html">Phone</a>
             <a href="email.html">Email</a>
         </div>
-        <a href="#">About</a>
+        <a href="#" onclick="toggleSubMenu('template-submenu')">Template</a>
+        <div id="template-submenu" class="submenu">
+            <a href="templatename.html">Template Name</a>
+            <a href="templatecontent.html">Template Content</a>
+        </div>
         <a href="#">Services</a>
         <a href="#">Contact</a>
     </div>
