--- a/email.html
+++ b/email.html
@@ -24,8 +24,8 @@
         </div>
         <a href="#" onclick="toggleSubMenu('template-submenu')">Template</a>
         <div id="template-submenu" class="submenu">
-            <a href="templatename.html">Template Name</a>
-            <a href="templatecontent.html">Template Content</a>
+            <!-- s -->
+            <a href="templatecontent.html">Template Structure</a>
         </div>
         <a href="#">Services</a>
         <a href="#">Contact</a>
