--- a/templatecontent.html
+++ b/templatecontent.html
@@ -55,7 +55,7 @@
         </div>
 
         <!-- Template Content Card -->
-        <div class="card">
+        <!-- <div class="card">
             <h2>Template Content</h2>
             <div class="field">
                 <label for="content-name">Content Name</label>
@@ -70,7 +70,7 @@
                 <button onclick="updateContent()">Update</button>
                 <button onclick="clearContent()">Clear</button>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script>
