--- a/email_campaigning.html
+++ b/email_campaigning.html
@@ -42,16 +42,16 @@
 
     <!-- Email Section with Selective Email Feature -->
     <div class="email-section">
-        <h2>SMS Campaigning</h2>
+        <h2>Email Campaigning</h2>
 
         <!-- Card View for the Email Section -->
         <div class="email-card">
             <div class="email-selection">
                 <!-- Dropdown for Select All Emails or Selective Emails -->
-                <label for="emailType">Choose SMS Type:</label>
+                <label for="emailType">Choose EmailType:</label>
                 <select id="emailType" onchange="toggleEmailInput()">
-                    <option value="all">All SMS</option>
-                    <option value="selective">Selective SMS</option>
+                    <option value="all">All Email</option>
+                    <option value="selective">Selective Email</option>
                 </select>
             </div>
 
