Routing and Campaining Done

--- a/templatecontent.html
+++ b/templatecontent.html
@@ -28,7 +28,12 @@
             <!-- s -->
             <a href="templatecontent.html">Template Structure</a>
         </div>
-        <a href="#">Services</a>
+        <a href="#" onclick="toggleSubMenu('campaigning-submenu')">Campaigning</a>
+    <div id="campaigning-submenu" class="submenu">
+        <a href="email_campaigning.html">Email Campaigning</a>
+        <a href="whatsapp_campaigning.html">WhatsApp Campaigning</a>
+        <a href="sms_campaigning.html">Phone Campaigning</a>
+    </div>
         <a href="#">Contact</a>
     </div>
 
