--- a/whatsapp_campaigning.html
+++ b/whatsapp_campaigning.html
@@ -53,6 +53,16 @@
                     <option value="all">All What's App</option>
                     <option value="selective">Selective What's App</option>
                 </select>
+
+
+
+                
+                <label for="templateType">Choose Template:</label>
+                <select id="templateType">
+                    <option value="template1">Template 1</option>
+                    <option value="template2">Template 2</option>
+                    <option value="template3">Template 3</option>
+                </select>
             </div>
 
             <!-- Email Textarea Section for Selective Emails -->
