--- a/sms_campaigning.html
+++ b/sms_campaigning.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Section with Selective Email Input</title>
+    <title>SMS Campaigning</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="smsCampining.css">
 </head>
 
 <body>
 
-    <!-- Navbar with menu toggle -->
+    <!-- Navbar -->
     <div class="navbar">
         <img src="menu.png" alt="Menu" class="open-btn" onclick="toggleDrawer()" />
         <span>My Website</span>
@@ -40,60 +40,67 @@
         <a href="#">Contact</a>
     </div>
 
-    <!-- Email Section with Selective Email Feature -->
+    <!-- SMS Campaigning Section -->
     <div class="email-section">
         <h2>SMS Campaigning</h2>
 
-        <!-- Card View for the Email Section -->
         <div class="email-card">
             <div class="email-selection">
-                <!-- Dropdown for Select All Emails or Selective Emails -->
-                <label for="emailType">Choose SMS Type:</label>
-                <select id="emailType" onchange="toggleEmailInput()">
-                    <option value="all">All SMS</option>
-                    <option value="selective">Selective SMS</option>
-                </select>
+                <!-- SMS Type Dropdown -->
+                <div class="form-group">
+                    <label for="smsType">Choose SMS Type:</label>
+                    <select id="smsType" onchange="toggleSmsInput()">
+                        <option value="all">All SMS</option>
+                        <option value="selective">Selective SMS</option>
+                    </select>
+                </div>
+
+                <!-- Template Type Dropdown -->
+                <div class="form-group">
+                    <label for="smsTemplate">Template Type:</label>
+                    <select id="smsTemplate">
+                        <option value="template1">Template 1</option>
+                        <option value="template2">Template 2</option>
+                        <option value="template3">Template 3</option>
+                    </select>
+                </div>
             </div>
 
-            <!-- Email Textarea Section for Selective Emails -->
-            <div class="selective-email-section" style="display:none;">
-                <!-- Textbox for Selective Emails -->
-                <label for="emails">Enter Number (comma separated):</label>
-                <textarea id="emails" placeholder="Enter email addresses here"></textarea>
+            <!-- Textarea for Selective SMS -->
+            <div class="selective-sms-section" style="display: none;">
+                <label for="smsNumbers">Enter Numbers (comma separated):</label>
+                <textarea id="smsNumbers" placeholder="Enter phone numbers here"></textarea>
             </div>
 
-            <!-- Email action buttons -->
-            <button onclick="submitEmailCampaign()">Submit Campaign</button>
+            <!-- Submit Button -->
+            <button onclick="submitSmsCampaign()">Submit Campaign</button>
         </div>
     </div>
 
-    <!-- Drawer JS for toggling the drawer visibility -->
+    <!-- JS Scripts -->
     <script src="drawer.js"></script>
-
-    <!-- JavaScript to handle the visibility of input sections and form submission -->
     <script>
-        // Function to toggle email input visibility based on dropdown selection
-        function toggleEmailInput() {
-            const emailType = document.getElementById("emailType").value;
-            const selectiveEmailSection = document.querySelector(".selective-email-section");
+        // Show/hide textarea based on SMS type selection
+        function toggleSmsInput() {
+            const smsType = document.getElementById("smsType").value;
+            const selectiveSection = document.querySelector(".selective-sms-section");
 
-            // If "Selective Emails" is selected, show the text input section
-            if (emailType === "selective") {
-                selectiveEmailSection.style.display = "block"; // Show input box for selective emails
+            if (smsType === "selective") {
+                selectiveSection.style.display = "block";
             } else {
-                selectiveEmailSection.style.display = "none";  // Hide input box for all emails
+                selectiveSection.style.display = "none";
             }
         }
 
-        // Submit email campaign logic (this can be expanded to include real email sending logic)
-        function submitEmailCampaign() {
-            const emailType = document.getElementById("emailType").value;
+        // Submit logic for SMS campaign
+        function submitSmsCampaign() {
+            const smsType = document.getElementById("smsType").value;
 
-            if (emailType === "all") {
-                alert("Submitting campaign to all emails.");
+            if (smsType === "all") {
+                alert("Submitting campaign to all numbers.");
             } else {
-                const emails = document.getElementById("emails").value;
-                alert("Submitting campaign to selected emails: " + emails);
+                const numbers = document.getElementById("smsNumbers").value;
+                alert("Submitting campaign to selected numbers: " + numbers);
             }
         }
     </script>
